增加微信服务好模块