@@ -85,18 +85,5 @@ dependencies {
     
    
 }
-if(enable_gretty.equals("true"))
-{
-    apply plugin: 'org.akhikhl.gretty'
-    
-     gretty {
-	    httpPort = 80
-	   //inplaceMode="hard"	  
-	   //scanInterval=0
-	    contextPath = project.name
-	    jvmArgs = ['-Xmx1024M', '-XX:PermSize=128M', '-XX:MaxPermSize=256M']
-	  //  servletContainer = 'jetty7'
-	  
-	  }
-} 
+
 webAppDirName = 'WebRoot'  
